@@ -9,6 +9,10 @@
     4. /etc/portage/sets/world is a symlink to /var/lib/portage/world
        It is for convenience. Do not mistake this for the actual file.
 
+  16 Sep 2004; Jason Stubbs <jstubbs@gentoo.org> portage.py:  Modified
+  getmaskingstatus() to use settings.prevmaskdict rather than reading packages
+  directly in support of cascading profiles.
+
 *portage-2.0.51_rc1 (15 Sep 2004): And we have Release Candidate!
 
   15 Sep 2004; Nicholas Jones <carpaski@gentoo.org> ebuild: On merge, disable
